--- a/Inkscape/Tutorials/tutorial-elements.po
+++ b/Inkscape/Tutorials/tutorial-elements.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial elements Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-06-30 09:09+0200\n"
+"PO-Revision-Date: 2025-07-09 08:45+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -32,7 +32,7 @@ msgid ""
 "This tutorial will demonstrate the elements and principles of design which are normally taught to early art students in order to understand various properties used in art making. "
 "This is not an exhaustive list, so please add, subtract, and combine to make this tutorial more comprehensive."
 msgstr ""
-"Denna handledning kommer att visa de element och principer för design som normalt lärs ut till tidiga konststudenter för att förstå olika egenskaper som används vid konstskapande. "
+"Denna handledning kommer att visa de element och designprinciper som normalt lärs ut tidigt till konststudenter för att förstå olika egenskaper som används vid att skapa konst. "
 "Detta är inte en uttömmande lista, så lägg till, dra ifrån och kombinera för att göra denna handledning mer omfattande."
 
 #. (itstool) path: sect1/title
@@ -74,8 +74,8 @@ msgid ""
 "A flat figure, shape is created when actual or implied lines meet to surround a space. A change in color or shading can define a shape. Shapes can be divided into several types: "
 "geometric (square, triangle, circle) and organic (irregular in outline)."
 msgstr ""
-"En platt figur, en form, skapas när faktiska eller underförstådda linjer möts och omger ett utrymme. En förändring i färg eller skuggning kan definiera en form. Former kan delas in "
-"i flera olika typer: geometriska (kvadrat, triangel, cirkel) och organiska (oregelbundna i konturen)."
+"En platt figur, en form, skapas när faktiska eller underförstådda linjer möts och omger ett område. En förändring i färg eller skuggning kan definiera en form. Former kan delas in i "
+"flera olika typer: geometriska (kvadrat, triangel, cirkel) och organiska (oregelbundna i konturen)."
 
 #. (itstool) path: sect2/title
 #. (itstool) path: text/tspan
@@ -87,14 +87,14 @@ msgstr "Storlek"
 #. (itstool) path: sect2/para
 #: tutorial-elements.xml:61
 msgid "This refers to variations in the proportions of objects, lines or shapes. There is a variation of sizes in objects either real or imagined."
-msgstr "Detta avser variationer i proportionerna mellan föremål, linjer eller former. Det finns en variation av storlekar i objekt, antingen verkliga eller inbillade."
+msgstr "Detta avser variationer i proportionerna mellan objekt, linjer eller former. Det finns en variation av storlekar i objekt, antingen verkliga eller inbillade."
 
 #. (itstool) path: sect2/title
 #. (itstool) path: text/tspan
 #: tutorial-elements.xml:74 elements-f01.svg:158
 #, no-wrap
 msgid "Space"
-msgstr "Utrymme"
+msgstr "Område"
 
 #. (itstool) path: sect2/para
 #: tutorial-elements.xml:75
@@ -102,8 +102,8 @@ msgid ""
 "Space is the empty or open area between, around, above, below, or within objects. Shapes and forms are made by the space around and within them. Space is often called three-"
 "dimensional or two- dimensional. Positive space is filled by a shape or form. Negative space surrounds a shape or form."
 msgstr ""
-"Utrymme är det tomma eller öppna området mellan, runt, ovanför, under eller inom föremål. Former och figurer skapas av utrymmet runt och inuti dem. Rymden kallas ofta "
-"tredimensionell eller tvådimensionell. Positivt utrymme fylls av en form eller ett föremål. Negativt utrymme omger en form."
+"Område är det tomma eller öppna området mellan, runt, ovanför, under eller inom objekt. Former och figurer skapas av området runt och inuti dem. Området kallas ofta tredimensionell "
+"eller tvådimensionell. Positivt område fylls av en form eller figur. Negativt område omger en form eller figur."
 
 #. (itstool) path: sect2/title
 #. (itstool) path: text/tspan
@@ -118,8 +118,8 @@ msgid ""
 "Color is the perceived character of a surface according to the wavelength of light reflected from it. Color has three dimensions: HUE (another word for color, indicated by its name "
 "such as red or yellow), VALUE (its lightness or darkness), INTENSITY (its brightness or dullness)."
 msgstr ""
-"Färg är den upplevda karaktären hos en yta beroende på våglängden hos det ljus som reflekteras från ytan. Färg har tre dimensioner: HUE (ett annat ord för färg, indikeras av dess "
-"namn, t.ex. röd eller gul), VALUE (dess ljushet eller mörker), INTENSITY (dess ljushet eller matthet)."
+"Färg är den upplevda egenskapen hos en yta beroende på våglängden hos det ljus som reflekteras från den. Färg har tre dimensioner: NYANS (ett annat ord för färg, indikeras av dess "
+"namn, t.ex. röd eller gul), VÄRDE (dess ljusintensitet eller mörk), INTENSITET (mättnad, hur stark eller intensiv färgen är eller dämpad)."
 
 #. (itstool) path: sect2/title
 #. (itstool) path: text/tspan
@@ -146,7 +146,7 @@ msgid ""
 "Value is how dark or how light something looks. We achieve value changes in color by adding black or white to the color. Chiaroscuro uses value in drawing by dramatically "
 "contrasting lights and darks in a composition."
 msgstr ""
-"Värde är hur mörkt eller ljust något ser ut. Vi uppnår värdeförändringar i färg genom att lägga till svart eller vitt i färgen. Chiaroscuro använder värde i teckning genom att "
+"Värde är hur mörkt eller ljust något ser ut. Vi uppnår värdeförändringar i färg genom att lägga till svart eller vitt i färgen. Chiaroscuro använder värde i ritningen genom att "
 "dramatiskt kontrastera ljus och mörker i en komposition."
 
 #. (itstool) path: sect1/title
@@ -172,8 +172,8 @@ msgid ""
 "Balance is a feeling of visual equality in shape, form, value, color, etc. Balance can be symmetrical or evenly balanced or asymmetrical and un-evenly balanced. Objects, values, "
 "colors, textures, shapes, forms, etc., can be used in creating a balance in a composition."
 msgstr ""
-"Balans är en känsla av visuell jämlikhet i form, uttryck, värde, färg etc. Balansen kan vara symmetrisk eller jämnt balanserad eller asymmetrisk och ojämnt balanserad. Objekt, "
-"värden, färger, texturer, former etc. kan användas för att skapa balans i en komposition."
+"Balans är en känsla av visuell jämlikhet i form, figur, värde, färg etc. Balansen kan vara symmetrisk eller jämnt balanserad eller asymmetrisk och ojämnt balanserad. Objekt, värden, "
+"färger, texturer, former etc. kan användas för att skapa balans i en komposition."
 
 #. (itstool) path: sect2/title
 #. (itstool) path: text/tspan
@@ -198,7 +198,7 @@ msgstr "Betoning"
 #: tutorial-elements.xml:167
 msgid "Emphasis is used to make certain parts of their artwork stand out and grab your attention. The center of interest or focal point is the place a work draws your eye to first."
 msgstr ""
-"Emphasis används för att få vissa delar av deras konstverk att sticka ut och fånga din uppmärksamhet. Intressecentrum eller fokuspunkt är den plats som ett verk först drar ditt öga "
+"Betoning används för att få vissa delar av deras konstverk att sticka ut och fånga din uppmärksamhet. Intressecentrum eller fokuspunkt är den plats som ett verk först drar ditt öga "
 "till."
 
 #. (itstool) path: sect2/title
@@ -206,7 +206,7 @@ msgstr ""
 #: tutorial-elements.xml:180 elements-f01.svg:249
 #, no-wrap
 msgid "Proportion"
-msgstr "Proportionell"
+msgstr "Proportion"
 
 #. (itstool) path: sect2/para
 #: tutorial-elements.xml:181
@@ -230,7 +230,7 @@ msgstr "Mönster skapas genom att ett element (linje, form eller färg) upprepas
 #: tutorial-elements.xml:206 elements-f01.svg:276
 #, no-wrap
 msgid "Gradation"
-msgstr "Gradering"
+msgstr "Gradation"
 
 #. (itstool) path: sect2/para
 #: tutorial-elements.xml:207
@@ -238,15 +238,15 @@ msgid ""
 "Gradation of size and direction produce linear perspective. Gradation of color from warm to cool and tone from dark to light produce aerial perspective. Gradation can add interest "
 "and movement to a shape. A gradation from dark to light will cause the eye to move along a shape."
 msgstr ""
-"Gradation av storlek och riktning ger linjärt perspektiv. Gradering av färg från varmt till kallt och ton från mörkt till ljust ger ett luftperspektiv. Graderingar kan göra en form "
-"intressant och ge den rörelse. En gradering från mörkt till ljust får ögat att röra sig längs en form."
+"Gradation av storlek och riktning ger linjärt perspektiv. Gradation av färg från varmt till kallt och ton från mörkt till ljust ger ett luftperspektiv. Gradation kan göra en form "
+"intressant och ge den rörelse. En gradation från mörkt till ljust får ögat att röra sig längs en form."
 
 #. (itstool) path: sect1/title
 #. (itstool) path: text/tspan
 #: tutorial-elements.xml:222 elements-f01.svg:289
 #, no-wrap
 msgid "Composition"
-msgstr "Sammansättning"
+msgstr "Komposition"
 
 #. (itstool) path: sect1/para
 #: tutorial-elements.xml:223
@@ -297,9 +297,9 @@ msgid ""
 "\">http://www.rejon.org/</ulink>) with this tutorial. Also, thanks to the Open Clip Art Library (<ulink url=\"https://openclipart.org/\">https://openclipart.org/</ulink>) and the "
 "graphics people have submitted to that project."
 msgstr ""
-"Ett särskilt tack till Linda Kim<ulink url=\"http://www.coroflot.com/redlucite/\">(http://www.coroflot.com/redlucite/)</ulink> för att hon hjälpte mig<ulink url=\"http://"
-"www.rejon.org/\">(http://www.rejon.org/)</ulink> med den här handledningen. Tack också till Open Clip Art Library<ulink url=\"https://openclipart.org/\">(https://openclipart.org/)</"
-"ulink> och den grafik som människor har skickat till det projektet."
+"Ett särskilt tack till Linda Kim (<ulink url=\"http://www.coroflot.com/redlucite/\">http://www.coroflot.com/redlucite/</ulink>) för att hon hjälpte mig (<ulink url=\"http://"
+"www.rejon.org/\">http://www.rejon.org/</ulink>) med den här handledningen. Tack också till Open Clip Art Library (<ulink url=\"https://openclipart.org/\">https://openclipart.org/</"
+"ulink>) och den grafik som folk har skickat till det projektet."
 
 #. (itstool) path: Work/format
 #: elements-f01.svg:51 elements-f02.svg:48 elements-f03.svg:48 elements-f04.svg:48 elements-f05.svg:48 elements-f06.svg:91 elements-f07.svg:91 elements-f08.svg:206 elements-f09.svg:48
