--- a/Inkscape/Tutorials/tutorial-interpolate.po
+++ b/Inkscape/Tutorials/tutorial-interpolate.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial interpolare Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-06-30 09:08+0200\n"
+"PO-Revision-Date: 2025-07-09 08:16+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -19,7 +19,7 @@ msgstr "Daniel Nylander <po@danielnylander.se>, 2025."
 #. (itstool) path: articleinfo/title
 #: tutorial-interpolate.xml:6
 msgid "Interpolate"
-msgstr "Interpolera"
+msgstr "Interpolering"
 
 #. (itstool) path: articleinfo/subtitle
 #: tutorial-interpolate.xml:7
@@ -29,7 +29,7 @@ msgstr "Handledning"
 #. (itstool) path: abstract/para
 #: tutorial-interpolate.xml:11
 msgid "This document explains how to use Inkscape's Interpolate extension"
-msgstr "Detta dokument förklarar hur man använder Inkscapes tillägg Interpolate"
+msgstr "Detta dokument förklarar hur man använder Inkscapes Interpolering-tillägg"
 
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:16
@@ -43,9 +43,10 @@ msgid ""
 "more selected paths. It basically means that it “fills in the gaps” between the "
 "paths and transforms them according to the number of steps given."
 msgstr ""
-"Interpolate gör en <firstterm>linjär interpolation</firstterm> mellan två eller "
-"flera valda banor. Det innebär i princip att den \"fyller i luckorna\" mellan "
-"banorna och omvandlar dem i enlighet med det antal steg som anges."
+"Interpolering gör en <firstterm>linjär interpolation</firstterm> mellan två "
+"eller flera valda slingor. Det innebär i princip att den \"fyller i "
+"mellanrummen” mellan slingorna och transformerar dem i enlighet med det antal "
+"steg som anges."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:22
@@ -55,10 +56,10 @@ msgid ""
 "Path</guisubmenu><guimenuitem>Interpolate Between Paths</guimenuitem></"
 "menuchoice> from the menu."
 msgstr ""
-"För att använda Interpolate-tillägget markerar du de banor som du vill omvandla "
-"och väljer <menuchoice><guimenu>Tillägg</guimenu><guisubmenu>Generera från "
-"sökväg</guisubmenu><guimenuitem>Interpolera mellan banor</guimenuitem></"
-"menuchoice> från menyn."
+"För att använda Interpolering-tillägget markerar du de slingor som du vill "
+"transformera och väljer <menuchoice><guimenu>Tillägg</"
+"guimenu><guisubmenu>Generera från slinga</guisubmenu><guimenuitem>Interpolering "
+"mellan slingor</guimenuitem></menuchoice> från menyn."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:27
@@ -71,16 +72,16 @@ msgid ""
 "are not paths, the extension will do nothing."
 msgstr ""
 "Innan du aktiverar tillägget måste de objekt som du ska transformera vara "
-"<emphasis>sökvägar</emphasis>. Detta görs genom att markera objektet och använda "
-"<menuchoice><guimenu>Sökväg</guimenu><guimenuitem>Objekt till slinga</"
+"<emphasis>slingor</emphasis>. Detta görs genom att markera objektet och använda "
+"<menuchoice><guimenu>Slinga</guimenu><guimenuitem>Objekt till slinga</"
 "guimenuitem></menuchoice> eller <keycombo><keycap function=\"control\">Ctrl</"
 "keycap><keycap function=\"shift\">Skift</keycap><keycap>C</keycap></keycombo>. "
-"Om dina objekt inte är banor kommer tillägget inte att göra någonting."
+"Om dina objekt inte är slingor kommer tillägget inte att göra någonting."
 
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:36
 msgid "Interpolation between two identical paths"
-msgstr "Interpolation mellan två identiska banor"
+msgstr "Interpolering mellan två identiska slingor"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:37
@@ -90,15 +91,15 @@ msgid ""
 "space between the two paths is filled with duplicates of the original paths. The "
 "number of steps defines how many of these duplicates are placed."
 msgstr ""
-"Den enklaste användningen av tillägget Interpolate är att interpolera mellan två "
-"banor som är identiska. När tillägget anropas blir resultatet att utrymmet "
-"mellan de två banorna fylls med kopior av de ursprungliga banorna. Antalet steg "
-"definierar hur många av dessa duplikat som placeras ut."
+"Den enklaste användningen av tillägget Interpolering är att interpolera mellan "
+"två slingor som är identiska. När tillägget anropas blir resultatet att utrymmet "
+"mellan de två slingorna fylls med kopior av de ursprungliga slingorna. Antalet "
+"steg definierar hur många av dessa duplikat som placeras ut."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:42 tutorial-interpolate.xml:75
 msgid "For example, take the following two paths:"
-msgstr "Ta till exempel följande två banor:"
+msgstr "Ta till exempel följande två slingor:"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:52
@@ -106,8 +107,8 @@ msgid ""
 "Now, select the two paths, and run the Interpolate extension with the settings "
 "shown in the following image."
 msgstr ""
-"Välj nu de två banorna och kör tillägget Interpolate med de inställningar som "
-"visas i följande bild."
+"Välj nu de två slingorna och kör tillägget Interpolering med de inställningar "
+"som visas i följande bild."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:62
@@ -117,13 +118,13 @@ msgid ""
 "shaped paths. Also note that the extension groups these shapes together."
 msgstr ""
 "Som framgår av ovanstående resultat har utrymmet mellan de två cirkelformade "
-"banorna fyllts med 6 (antalet interpoleringssteg) andra cirkelformade banor. "
-"Notera också att förlängningen grupperar dessa former tillsammans."
+"slingorna fyllts med 6 (antalet interpoleringssteg) andra cirkelformade slingor. "
+"Notera också att tillägget grupperar dessa former tillsammans."
 
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:69
 msgid "Interpolation between two different paths"
-msgstr "Interpolering mellan två olika banor"
+msgstr "Interpolering mellan två olika slingor"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:70
@@ -133,9 +134,10 @@ msgid ""
 "sequence between the paths, with the regularity still defined by the "
 "Interpolation Steps value."
 msgstr ""
-"När interpolering görs på två olika banor interpolerar programmet slingans form "
-"från den ena till den andra. Resultatet blir en morphing-sekvens mellan banorna, "
-"där regelbundenheten fortfarande definieras av värdet Interpolation Steps."
+"När interpolering görs på två olika slingor interpolerar programmet slingans "
+"form från den ena till den andra. Resultatet blir en morphing-sekvens mellan "
+"slingorna, där regelbundenheten fortfarande definieras av värdet "
+"Interpoleringssteg."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:85
@@ -143,8 +145,8 @@ msgid ""
 "Now, select the two paths, and run the Interpolate extension. The result should "
 "be like this:"
 msgstr ""
-"Välj nu de två banorna och kör tillägget Interpolate. Resultatet bör se ut så "
-"här:"
+"Välj nu de två slingorna och kör tillägget Interpolering. Resultatet bör se ut "
+"så här:"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:95
@@ -154,8 +156,8 @@ msgid ""
 "from one path to the other."
 msgstr ""
 "Som framgår av ovanstående resultat har utrymmet mellan den cirkelformade "
-"slingan och den triangelformade slingan fyllts med 6 banor som går framåt i form "
-"från den ena slingan till den andra."
+"slingan och den triangelformade slingan fyllts med 6 slingor som går framåt i "
+"form från den ena slingan till den andra."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:99
@@ -166,11 +168,11 @@ msgid ""
 "that the nodes appear and press <keycap>TAB</keycap>. The first node that is "
 "selected is the starting node of that path."
 msgstr ""
-"När du använder tillägget Interpolate på två olika sökvägar är "
-"<emphasis>positionen</emphasis> för startnoden för varje sökväg viktig. För att "
-"hitta startnoden för en sökväg markerar du sökvägen, väljer Node Tool så att "
+"När du använder tillägget Interpolering på två olika slingor är "
+"<emphasis>positionen</emphasis> för startnoden för varje slinga viktig. För att "
+"hitta startnoden för en slinga markerar du slingan, väljer Nodverktyg så att "
 "noderna visas och trycker på <keycap>TAB</keycap>. Den första noden som väljs är "
-"startnoden för den sökvägen."
+"startnoden för den slingan."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:105
@@ -203,7 +205,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:146
 msgid "Interpolation Method"
-msgstr "Interpolationsmetod"
+msgstr "Interpoleringsmetod"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:147
@@ -214,11 +216,11 @@ msgid ""
 "<guilabel>Split paths into segments of equal lengths</guilabel> or "
 "<guilabel>Discard extra nodes of longer path</guilabel>."
 msgstr ""
-"En av parametrarna i Interpolate-tillägget är Interpolation Method. Det finns 2 "
+"En av parametrarna i Interpolering-tillägget är Interpoleringsmetod. Det finns 2 "
 "interpolationsmetoder implementerade, och de skiljer sig åt i hur de beräknar "
-"kurvorna för de nya formerna. Valmöjligheterna är antingen att <guilabel>dela "
-"upp vägar i lika långa segment</guilabel> eller att ta <guilabel>bort extra "
-"noder i en längre väg.</guilabel>."
+"kurvorna för de nya formerna. Valmöjligheterna är antingen att <guilabel>Dela "
+"upp slingor i lika långa segment</guilabel> eller <guilabel>Förkasta extra noder "
+"med längre slinga</guilabel>."
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:153
@@ -226,13 +228,13 @@ msgid ""
 "In the examples above, we used the first Interpolation Method (Split paths), and "
 "the result was:"
 msgstr ""
-"I exemplen ovan använde vi den första interpoleringsmetoden (Split paths), och "
-"resultatet blev:"
+"I exemplen ovan använde vi den första interpoleringsmetoden (Dela upp slingor), "
+"och resultatet blev:"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:163
 msgid "Now compare this to Interpolation Method 2 (Ignore nodes):"
-msgstr "Jämför nu detta med Interpolationsmetod 2 (Ignorera noder):"
+msgstr "Jämför nu detta med Interpoleringsmetod 2 (Ignorera noder):"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:173
@@ -288,7 +290,7 @@ msgid ""
 "star-shaped path on the left was selected first, and the hexagon-shaped path on "
 "the right was selected second."
 msgstr ""
-"När du hanterar exponenter i Interpolate-tillägget är <emphasis>ordningen</"
+"När du hanterar exponenter i Interpolering-tillägget är <emphasis>ordningen</"
 "emphasis> som du väljer objekten viktig. I exemplen ovan valdes den "
 "stjärnformade slingan till vänster först och den hexagonformade slingan till "
 "höger valdes som nummer två."
@@ -299,13 +301,13 @@ msgid ""
 "View the result when the path on the right was selected first. The exponent in "
 "this example was set to 0.5:"
 msgstr ""
-"Visa resultatet när vägen till höger valdes först. Exponenten i detta exempel "
+"Visa resultatet när slingan till höger valdes först. Exponenten i detta exempel "
 "var inställd på 0,5:"
 
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:241
 msgid "Duplicate Endpaths"
-msgstr "Dubbla slutvägar"
+msgstr "Dubbletta slutslingor"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:242
@@ -314,14 +316,14 @@ msgid ""
 "extension <emphasis>includes a copy</emphasis> of the original paths that "
 "interpolate was applied on."
 msgstr ""
-"Denna parameter anger om den grupp av banor som genereras av tillägget "
-"<emphasis>innehåller en kopia</emphasis> av de ursprungliga banor som "
+"Denna parameter anger om den grupp av slingor som genereras av tillägget "
+"<emphasis>innehåller en kopia</emphasis> av de ursprungliga slingorna som "
 "interpolering tillämpades på."
 
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:248
 msgid "Interpolate Style"
-msgstr "Interpolera stil"
+msgstr "Interpoleringsstil"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:249
@@ -331,9 +333,9 @@ msgid ""
 "if the start and end paths are different colors, the paths that are generated "
 "will incrementally change as well."
 msgstr ""
-"Denna parameter är en av de smarta funktionerna i tillägget interpolate. Den "
-"talar om för tillägget att försöka ändra stilen på sökvägarna i varje steg. Så "
-"om start- och slutvägarna har olika färger kommer de vägar som genereras också "
+"Denna parameter är en av de smarta funktionerna i Interpolering-tillägget. Den "
+"talar om för tillägget att försöka ändra stilen på slingorna i varje steg. Så om "
+"start- och slutslingorna har olika färger kommer de vägar som genereras också "
 "att ändras stegvis."
 
 #. (itstool) path: sect1/para
@@ -342,13 +344,13 @@ msgid ""
 "Here is an example where the Interpolate Style function is used on the fill of a "
 "path:"
 msgstr ""
-"Här är ett exempel där funktionen Interpolate Style används för att fylla en "
+"Här är ett exempel där funktionen Interpoleringsstil används för att fylla en "
 "slinga:"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:264
 msgid "Interpolate Style also affects the stroke of a path:"
-msgstr "Interpolate Style påverkar också strecket på en slinga:"
+msgstr "Interpoleringsstil påverkar också strecket för en slinga:"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:274
@@ -362,7 +364,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-interpolate.xml:286
 msgid "Using Interpolate to fake irregular-shaped gradients"
-msgstr "Använda Interpolate för att fejka oregelbundet formade gradienter"
+msgstr "Använda Interpolering för att fejka oregelbundet formade gradienter"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:287
@@ -373,10 +375,10 @@ msgid ""
 "Interpolate Style. A simple example follows — draw two lines of different "
 "strokes:"
 msgstr ""
-"På den tiden då gradientmesh inte var implementerat i Inkscape var det inte "
+"På den tiden då gradientnät inte var implementerat i Inkscape var det inte "
 "möjligt att skapa en gradient som inte var linjär (rak linje) eller radiell "
-"(rund). Det gick dock att fejka med hjälp av tillägget Interpolate och "
-"Interpolate Style. Ett enkelt exempel följer - rita två linjer med olika slag:"
+"(rund). Det gick dock att fejka med hjälp av tillägget Interpolation och "
+"Interpoleringsstil. Ett enkelt exempel följer - rita två linjer med olika slag:"
 
 #. (itstool) path: sect1/para
 #: tutorial-interpolate.xml:299
@@ -395,9 +397,9 @@ msgid ""
 "This tutorial covers the basics of this extension, but experimentation is the "
 "key to exploring interpolation further."
 msgstr ""
-"Som visats ovan är tillägget Inkscape Interpolate ett kraftfullt verktyg. Denna "
-"handledning täcker grunderna i detta tillägg, men experiment är nyckeln till att "
-"utforska interpolering ytterligare."
+"Som visats ovan är Interpolation-tillägget i Inkscape ett kraftfullt verktyg. "
+"Denna handledning täcker grunderna i detta tillägg, men experiment är nyckeln "
+"till att utforska interpolering ytterligare."
 
 #. (itstool) path: Work/format
 #: interpolate-f01.svg:49 interpolate-f02.svg:52 interpolate-f03.svg:49
@@ -420,25 +422,25 @@ msgstr "Exponent: 1,0"
 #: interpolate-f02.svg:132 interpolate-f04.svg:123 interpolate-f11.svg:123
 #, no-wrap
 msgid "Interpolation Steps: 6"
-msgstr "Interpolationssteg: 6"
+msgstr "Interpoleringssteg: 6"
 
 #. (itstool) path: text/tspan
 #: interpolate-f02.svg:136 interpolate-f04.svg:127 interpolate-f11.svg:127
 #, no-wrap
 msgid "Interpolation Method: Split paths into segments of equal lengths"
-msgstr "Metod för interpolering: Dela upp banor i lika långa segment"
+msgstr "Metod för interpolering: Dela upp slingor i lika långa segment"
 
 #. (itstool) path: text/tspan
 #: interpolate-f02.svg:140 interpolate-f04.svg:131 interpolate-f11.svg:131
 #, no-wrap
 msgid "Duplicate Endpaths: unchecked   "
-msgstr "Duplicerade slutvägar: okontrollerad  "
+msgstr "Duplicerade slutslingor: avmarkerad  "
 
 #. (itstool) path: text/tspan
 #: interpolate-f02.svg:144 interpolate-f04.svg:135 interpolate-f11.svg:135
 #, no-wrap
 msgid "Interpolate Style: unchecked  "
-msgstr "Interpolera stil: avmarkerad  "
+msgstr "Interpoleringsstil: avmarkerad  "
 
 #. (itstool) path: text/tspan
 #: interpolate-f02.svg:148 interpolate-f04.svg:139 interpolate-f11.svg:139
