--- a/Inkscape/Tutorials/tutorial-tracing-pixelart.po
+++ b/Inkscape/Tutorials/tutorial-tracing-pixelart.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial tracing pixelart Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-06-30 09:07+0200\n"
+"PO-Revision-Date: 2025-07-09 09:02+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -34,7 +34,7 @@ msgstr "Innan vi hade tillgång till bra redigeringsprogram för vektorgrafik...
 #. (itstool) path: abstract/para
 #: tutorial-tracing-pixelart.xml:14
 msgid "Even before we had 640x480 computer displays..."
-msgstr "Redan innan vi hade 640x480 datorskärmar..."
+msgstr "Redan innan vi hade datorskärmar med 640x480..."
 
 #. (itstool) path: abstract/para
 #: tutorial-tracing-pixelart.xml:17
@@ -42,8 +42,8 @@ msgid ""
 "It was common to play video games with carefully crafted pixels in low "
 "resolutions displays."
 msgstr ""
-"Det var vanligt att spela videospel med noggrant utformade pixlar i skärmar "
-"med låg upplösning."
+"Var det vanligt att spela datorspel med noggrant utformade bildpunkter i "
+"skärmar med låg upplösning."
 
 #. (itstool) path: abstract/para
 #: tutorial-tracing-pixelart.xml:20
@@ -65,7 +65,7 @@ msgstr ""
 "vektorisera dessa \"speciella\" Pixel Art-bilder. Du kan prova andra typer "
 "av inmatningsbilder också, men var försiktig: Resultatet kommer inte att bli "
 "lika bra och det är en bättre idé att använda den andra fliken i Inkscapes "
-"dialogruta Trace Bitmap."
+"dialogruta Kalkera rasterbild."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:31
@@ -75,7 +75,7 @@ msgid ""
 "Pixel Cup entry) on the left and its vectorized output on the right."
 msgstr ""
 "Låt oss börja med en exempelbild för att visa dig kapaciteten hos denna "
-"spårningsmotor. Nedan finns ett exempel på en rasterbild (hämtad från ett "
+"kalkeringsmotor. Nedan finns ett exempel på en rasterbild (hämtad från ett "
 "bidrag i Liberated Pixel Cup) till vänster och dess vektoriserade utdata "
 "till höger."
 
@@ -96,7 +96,7 @@ msgstr ""
 "och matematiska koncept för att ge ett bra resultat för pixelkonstbilder. En "
 "sak att notera är att alfakanalen helt ignoreras av algoritmen. "
 "libdepixelize har för närvarande inga tillägg för att ge en förstklassig "
-"medborgarbehandling för denna klass av bilder, men alla pixelkonstbilder med "
+"medborgarbehandling för denna typ av bilder, men alla pixelkonstbilder med "
 "alfakanalstöd ger resultat som liknar huvudklassen av bilder som "
 "identifieras av Kopf-Lischinski."
 
@@ -111,9 +111,9 @@ msgid ""
 msgstr ""
 "Bilden ovan har alfakanal och resultatet är helt okej. Men om du hittar en "
 "pixelkonstbild med dåligt resultat och du tror att det beror på alfakanalen, "
-"kontakta libdepixelize-underhållaren (t.ex. genom att fylla i en bugg på "
-"projektsidan) så kommer han gärna att utöka algoritmen. Han kan inte utöka "
-"algoritmen om han inte vet vilka bilder som ger dåliga resultat."
+"kontakta libdepixelize-underhållaren (t.ex. genom att fylla i en buggrapport "
+"på projektsidan) så kommer han gärna att utöka algoritmen. Han kan inte "
+"utöka algoritmen om han inte vet vilka bilder som ger dåliga resultat."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:62
@@ -124,12 +124,12 @@ msgid ""
 "guisubmenu><guimenuitem>Pixel art</guimenuitem></menuchoice> menu or right-"
 "clicking on an image object and then <guimenuitem>Trace Bitmap</guimenuitem>."
 msgstr ""
-"Bilden nedan är en skärmdump av <guimenuitem>Pixel art-dialogen</"
-"guimenuitem> i den engelska lokaliseringen. Du kan öppna den här dialogrutan "
-"med hjälp av <menuchoice><guimenu>Sökväg</guimenu><guisubmenu>Spåra bitmapp</"
-"guisubmenu><guimenuitem>Pixelkonst</guimenuitem></menuchoice> menyn eller "
-"högerklicka på ett bildobjekt och sedan <guimenuitem>Trace Bitmap</"
-"guimenuitem>."
+"Bilden nedan är en skärmdump av <guimenuitem>Pixel art</guimenuitem>-"
+"dialogen i den engelska lokalanpassningen. Du kan öppna den här dialogrutan "
+"med hjälp av <menuchoice><guimenu>Slinga</guimenu><guisubmenu>Kalkera "
+"rasterbild</guisubmenu><guimenuitem>Pixelkonst</guimenuitem></menuchoice>-"
+"menyn eller högerklicka på ett bildobjekt och sedan <guimenuitem>Kalkera "
+"rasterbild</guimenuitem>."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:75
@@ -139,10 +139,10 @@ msgid ""
 "about that, so let's leave it for later and starting with the explanation "
 "for output."
 msgstr ""
-"Denna dialogruta har två avsnitt: Heuristik och utdata. Heuristik är avsedd "
-"för avancerad användning, men det finns redan bra standardinställningar och "
-"du bör inte oroa dig för det, så vi lämnar det till senare och börjar med "
-"förklaringen för utdata."
+"Denna dialogruta har två avsnitt: Heuristik och utmatning. Heuristik är "
+"avsedd för avancerad användning, men det finns redan bra "
+"standardinställningar och du bör inte oroa dig för det, så vi lämnar det "
+"till senare och börjar med förklaringen för utmatning."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:80
@@ -161,11 +161,11 @@ msgstr ""
 "omvandlar data till flera olika typer av representationer. I varje steg har "
 "algoritmen möjlighet att utforska de operationer som den aktuella "
 "representationen erbjuder. Vissa av dessa mellanliggande representationer "
-"har en korrekt visuell representation (som den omformade cellgrafen Voronoi "
-"output) och andra har det inte (som likhetsgrafen). Under utvecklingen av "
+"har en korrekt visuell representation (som den omformade cellgrafen Voronoi-"
+"utmatning) och andra har det inte (som likhetsgrafen). Under utvecklingen av "
 "libdepixelize fortsatte användarna att be om att lägga till möjligheten att "
 "exportera dessa mellanstadier till libdepixelize och den ursprungliga "
-"libdepixelize-författaren uppfyllde deras önskemål."
+"libdepixelize-upphovspersonen uppfyllde deras önskemål."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:88
@@ -177,11 +177,11 @@ msgid ""
 "and click in <guibutton>OK</guibutton> after choosing some image on Inkscape."
 msgstr ""
 "Standardutmatningen bör ge det jämnaste resultatet och är förmodligen vad du "
-"vill ha. Du såg redan standardutgången på de första exemplen i denna "
-"handledning. Om du vill prova det själv, öppna bara <guimenuitem>Trace "
-"Bitmap-dialogrutan</guimenuitem>, välj fliken <guimenuitem>Pixel art</"
-"guimenuitem> och klicka på <guibutton>OK</guibutton> efter att ha valt en "
-"bild på Inkscape."
+"vill ha. Du såg redan standardutmatningen på de första exemplen i denna "
+"handledning. Om du vill prova det själv, öppna bara dialogrutan "
+"<guimenuitem>Kalkera rasterbild</guimenuitem>, välj fliken "
+"<guimenuitem>Pixelkonst</guimenuitem> och klicka på <guibutton>OK</"
+"guibutton> efter att ha valt en bild i Inkscape."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:94
@@ -197,14 +197,15 @@ msgid ""
 "edge (previously only single vertices were shared by two diagonal cells)."
 msgstr ""
 "Du kan se Voronoi-resultatet nedan och detta är en \"omformad pixelbild\", "
-"där cellerna (tidigare pixlar) omformas för att ansluta pixlar som är en del "
-"av samma funktion. Inga kurvor kommer att skapas och bilden fortsätter att "
-"bestå av raka linjer. Skillnaden kan observeras när du förstorar bilden. "
-"Tidigare kunde pixlar inte dela kant med en diagonal granne, även om de var "
-"tänkta att vara en del av samma feature. Men nu (tack vare en "
-"färglikhetsgraf och den heuristik som du kan ställa in för att uppnå ett "
-"bättre resultat) är det möjligt att få två diagonala celler att dela en kant "
-"(tidigare delades endast enstaka hörnpunkter av två diagonala celler)."
+"där cellerna (tidigare bildpunkter) omformas för att ansluta bildpunkter som "
+"är en del av samma funktion. Inga kurvor kommer att skapas och bilden "
+"fortsätter att bestå av raka linjer. Skillnaden kan observeras när du "
+"förstorar bilden. Tidigare kunde bildpunkter inte dela kant med en diagonal "
+"granne, även om de var tänkta att vara en del av samma funktion. Men nu "
+"(tack vare en färglikhetsgraf och den heuristik som du kan ställa in för att "
+"uppnå ett bättre resultat) är det möjligt att få två diagonala celler att "
+"dela en kant (tidigare delades endast enstaka hörnpunkter av två diagonala "
+"celler)."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:110
@@ -216,12 +217,12 @@ msgid ""
 "reaches a T-junction among the visible colors. A hint about the heuristics "
 "of this stage: You can't tune them."
 msgstr ""
-"Standardutgången B-splines ger dig jämna resultat, eftersom den tidigare "
-"Voronoi-utgången konverteras till kvadratiska Bézier-kurvor. Konverteringen "
-"kommer dock inte att vara 1:1 eftersom det finns fler heuristiker som "
-"arbetar för att bestämma vilka kurvor som ska slås samman till en när "
-"algoritmen når en T-korsning bland de synliga färgerna. En ledtråd om "
-"heuristiken i det här steget: Du kan inte ställa in dem."
+"Standardutmatningen B-splines ger dig jämna resultat, eftersom den tidigare "
+"Voronoi-utmatningen konverteras till kvadratiska Bézier-kurvor. "
+"Konverteringen kommer dock inte att vara 1:1 eftersom det finns fler "
+"heuristiker som arbetar för att bestämma vilka kurvor som ska slås samman "
+"till en när algoritmen når en T-korsning bland de synliga färgerna. En "
+"ledtråd om heuristiken i det här steget: Du kan inte ställa in dem."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:116
@@ -236,13 +237,14 @@ msgid ""
 "(hopefully soon)."
 msgstr ""
 "Det sista steget i libdepixelize (som för närvarande inte kan exporteras av "
-"Inkscape GUI på grund av dess experimentella och ofullständiga tillstånd) är "
-"\"optimize curves\" för att ta bort trappstegseffekten av B-Spline-kurvorna. "
-"I detta steg utförs också en gränsdetekteringsteknik för att förhindra att "
-"vissa funktioner jämnas ut och en trianguleringsteknik för att fixera "
-"nodernas position efter optimeringen. Du bör kunna inaktivera var och en av "
-"dessa funktioner individuellt när denna utdata lämnar \"experimentstadiet\" "
-"i libdepixelize (förhoppningsvis snart)."
+"Inkscapes grafiska gränssnitt på grund av dess experimentella och "
+"ofullständiga tillstånd) är \"optimize curves\" för att ta bort "
+"trappstegseffekten av B-Spline-kurvorna. I detta steg utförs också en "
+"gränsdetekteringsteknik för att förhindra att vissa funktioner jämnas ut och "
+"en trianguleringsteknik för att fixera nodernas position efter optimeringen. "
+"Du bör kunna inaktivera var och en av dessa funktioner individuellt när "
+"denna utmatning lämnar \"experimentstadiet\" i libdepixelize "
+"(förhoppningsvis snart)."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:123
@@ -256,10 +258,11 @@ msgid ""
 msgstr ""
 "I avsnittet om heuristik i guiden kan du ställa in den heuristik som "
 "libdepixelize använder för att bestämma vad som ska göras när den stöter på "
-"ett 2x2-pixelblock där de två diagonalerna har liknande färger. \"Vilken "
-"anslutning ska jag behålla?\" är vad libdepixelize frågar sig. Den försöker "
-"tillämpa alla heuristiker på de motstridiga diagonalerna och behåller den "
-"vinnande anslutningen. Om det blir oavgjort raderas båda förbindelserna."
+"ett 2x2-bildpunktsblock där de två diagonalerna har liknande färger. "
+"\"Vilken anslutning ska jag behålla?\" är vad libdepixelize frågar sig. Den "
+"försöker tillämpa alla heuristiker på de motstridiga diagonalerna och "
+"behåller den vinnande anslutningen. Om det blir oavgjort raderas båda "
+"anslutningarna."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:129
@@ -282,7 +285,7 @@ msgid ""
 "heuristics turned on for each try. Pay attention to the purple circles that "
 "highlight the differences that each heuristic performs."
 msgstr ""
-"Bilden nedan visar en bild och B-Splines-utdata med endast en av "
+"Bilden nedan visar en bild och B-Splines-utmatning med endast en av "
 "heuristikerna aktiverad för varje försök. Var uppmärksam på de lila "
 "cirklarna som markerar skillnaderna som varje heuristik utför."
 
@@ -300,15 +303,15 @@ msgid ""
 "blocks instead of long curves (think about a chess board)."
 msgstr ""
 "Vid det första försöket (övre bilden) aktiverar vi bara kurvheuristiken. "
-"Denna heuristik försöker hålla långa kurvor sammankopplade. Du kan se att "
-"dess resultat liknar den sista bilden, där heuristiken för glesa pixlar "
+"Denna heuristik försöker hålla långa kurvor anslutna. Du kan se att dess "
+"resultat liknar den sista bilden, där heuristiken för glesa bildpunkter "
 "används. En skillnad är att dess \"styrka\" är mer rättvis och att den bara "
 "ger ett högt värde till sin röst när det verkligen är viktigt att behålla "
-"dessa kopplingar. Den \"rättvisa\" definitionen/konceptet här baseras på "
-"\"mänsklig intuition\" med tanke på den pixeldatabas som analyserats. En "
-"annan skillnad är att denna heuristik inte kan avgöra vad som ska göras när "
-"anslutningarna grupperar stora block istället för långa kurvor (tänk på ett "
-"schackbräde)."
+"dessa anslutningar. Den \"rättvisa\" definitionen/konceptet här baseras på "
+"\"mänsklig intuition\" med tanke på den bildpunktsdatabas som analyserats. "
+"En annan skillnad är att denna heuristik inte kan avgöra vad som ska göras "
+"när anslutningarna grupperar stora block istället för långa kurvor (tänk på "
+"ett schackbräde)."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:153
@@ -322,10 +325,10 @@ msgid ""
 msgstr ""
 "För det andra försöket (den mellersta bilden) aktiverar vi bara ö-"
 "heuristiken. Det enda den här heuristiken gör är att försöka behålla den "
-"koppling som annars skulle resultera i flera isolerade pixlar (öar) med en "
-"konstant viktröst. Den här typen av situation är inte lika vanlig som den "
-"som hanteras av de andra heuristikerna, men den här heuristiken är cool och "
-"bidrar till att ge ännu bättre resultat."
+"anslutning som annars skulle resultera i flera isolerade bildpunkter (öar) "
+"med en konstant viktröst. Den här typen av situation är inte lika vanlig som "
+"den som hanteras av de andra heuristikerna, men den här heuristiken är cool "
+"och bidrar till att ge ännu bättre resultat."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:159
@@ -342,15 +345,16 @@ msgid ""
 "value for its multiplier."
 msgstr ""
 "För det tredje försöket (den nedre bilden) aktiverar vi bara heuristiken för "
-"glesa pixlar. Denna heuristik försöker hålla kurvorna med förgrundsfärgen "
-"sammankopplade. För att ta reda på vilken som är förgrundsfärgen analyserar "
-"heuristiken ett fönster med pixlarna runt de motstridiga kurvorna. För den "
-"här heuristiken ställer du inte bara in dess \"styrka\", utan även fönstret "
-"med pixlar som den analyserar. Men kom ihåg att när du ökar fönstret med "
-"pixlar som analyseras kommer den maximala \"styrkan\" för dess röst också "
-"att öka och du kanske vill justera multiplikatorn för dess röst. Den "
-"ursprungliga libdepixelize-författaren tycker att denna heuristik är för "
-"girig och gillar att använda värdet \"0,25\" för sin multiplikator."
+"glesa bildpunkter. Denna heuristik försöker hålla kurvorna med "
+"förgrundsfärgen anslutna. För att ta reda på vilken som är förgrundsfärgen "
+"analyserar heuristiken ett fönster med bildpunkterna runt de motstridiga "
+"kurvorna. För den här heuristiken ställer du inte bara in dess \"styrka\", "
+"utan även fönstret med bildpunkter som den analyserar. Men kom ihåg att när "
+"du ökar fönstret med bildpunkter som analyseras kommer den maximala "
+"\"styrkan\" för dess röst också att öka och du kanske vill justera "
+"multiplikatorn för dess röst. Den ursprungliga libdepixelize-upphovspersonen "
+"tycker att denna heuristik är för girig och gillar att använda värdet "
+"\"0,25\" för sin multiplikator."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:168
@@ -361,11 +365,11 @@ msgid ""
 "pixels won't be hampered and there are cases that can be only answered by "
 "the sparse pixels heuristic."
 msgstr ""
-"Även om resultaten av kurvheuristiken och heuristiken för glesa pixlar ger "
-"liknande resultat kan det vara bra att låta båda vara aktiverade, eftersom "
-"kurvheuristiken kan ge en extra säkerhet att de viktiga kurvorna för "
-"konturpixlar inte hindras och det finns fall som endast kan besvaras av "
-"heuristiken för glesa pixlar."
+"Även om resultaten av kurvheuristiken och heuristiken för glesa bildpunkter "
+"ger liknande resultat kan det vara bra att låta båda vara aktiverade, "
+"eftersom kurvheuristiken kan ge en extra säkerhet att de viktiga kurvorna "
+"för konturbildpunkter inte hindras och det finns fall som endast kan "
+"besvaras av heuristiken för glesa bildpunkter."
 
 #. (itstool) path: article/para
 #: tutorial-tracing-pixelart.xml:173
@@ -396,8 +400,8 @@ msgid ""
 msgstr ""
 "Och det är allt! För denna första version av libdepixelize är detta alla de "
 "alternativ du har. Men om forskningen från den ursprungliga libdepixelize-"
-"författaren och dess kreativa mentor lyckas kan du få extra alternativ som "
-"breddar ännu mer utbudet av bilder för vilka libdepixelize ger ett bra "
+"upphovspersonen och dess kreativa mentor lyckas kan du få extra alternativ "
+"som breddar ännu mer utbudet av bilder för vilka libdepixelize ger ett bra "
 "resultat. Önska dem lycka till."
 
 #. (itstool) path: article/para
